Eliminate -Xlint warnings and replace deprecated texture atlas APIs.
Introduce BcTextureAtlases, tighten builders/snapshot generics, and fix unchecked and deprecation warnings across the codebase.